finish activity and fragment inject

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+
     // for lifecycle kotlin extensions method
     implementation 'android.arch.lifecycle:extensions:2.0.0'
 
@@ -50,6 +51,15 @@ dependencies {
 
     // timber log
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // dagger
+    implementation 'com.google.dagger:dagger:2.23.2'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.23.2'
+    implementation 'com.google.dagger:dagger-android:2.23.2'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.23.2'
+    implementation 'com.google.dagger:dagger-android-support:2.23.2'
+    kapt 'com.google.dagger:dagger-compiler:2.23.2'
+    kapt 'com.google.dagger:dagger-android-processor:2.23.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
