--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,19 +47,22 @@ dependencies {
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
     // timber log
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // dagger
     implementation 'com.google.dagger:dagger:2.23.2'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.23.2'
-    implementation 'com.google.dagger:dagger-android:2.23.2'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.23.2'
-    implementation 'com.google.dagger:dagger-android-support:2.23.2'
     kapt 'com.google.dagger:dagger-compiler:2.23.2'
+    implementation 'com.google.dagger:dagger-android:2.23.2'
     kapt 'com.google.dagger:dagger-android-processor:2.23.2'
+    implementation 'com.google.dagger:dagger-android-support:2.23.2'
+
+    // room
+    implementation 'androidx.room:room-runtime:2.1.0'
+    kapt 'androidx.room:room-compiler:2.1.0'
+    implementation 'androidx.room:room-ktx:2.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
