--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.core:core-ktx:1.0.2'
+
+    // constraint layout
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
 
     // for lifecycle kotlin extensions method
